<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">UniFud</string>
    <string name="action_refresh_title">Refresh</string>
    <string name="action_settings_title">Settings</string>
    <string name="action_about_title">About</string>

    <string name="dialog_close">OK</string>
    <string name="settings_show_campus_header">Shown campuses</string>

    <string name="settings_general">General</string>
    <string name="restaurant_business_header">Open</string>
    <string name="restaurant_lunch_header">Lunch</string>
    <string name="no_exceptions">none</string>
    <string name="exceptions_header">Exceptions:</string>
    <string name="restaurant_bistro_header">Bistro</string>

</resources>
